--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,16 @@ mybatis-plus:
     auto-mapping-behavior: partial
     map-underscore-to-camel-case: true
 
+redis:
+  database: mall
+  key:
+    admin: 'ums:admin'
+    resourceList: 'ums:resourceList'
+  expire:
+    common: 86400 # 24小时
 
-
-
+jwt:
+  tokenHeader: Authorization #JWT存储的请求头
+  secret: account-system-secret #JWT加解密使用的密钥
+  expiration: 604800 #JWT的超期限时间(60*60*24*7)
+  tokenHead: 'Bearer '  #JWT负载中拿到开头
